@@ -61,7 +61,10 @@ Architecture: any
 Multi-Arch: same
 Priority: optional
 Pre-Depends: ${misc:Pre-Depends}
-Depends: libpython3.9-minimal (= ${binary:Version}), mime-support, ${shlibs:Depends}, ${misc:Depends}
+Depends: libpython3.9-minimal (= ${binary:Version}), mime-support,
+  tzdata,
+  ${shlibs:Depends}, ${misc:Depends}
+Recommends: ca-certificates
 Description: Interactive high-level object-oriented language (standard library, version 3.9)
  Python is a high-level, interactive, object-oriented language. Its 3.9 version
  includes an extensive class library with lots of goodies for
